--- a/ecomm/src/components/custom-button/custom-button.scss
+++ b/ecomm/src/components/custom-button/custom-button.scss
@@ -12,6 +12,9 @@
     font-family: 'Open Sans Condensed';
     font-weight: bolder;
     border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
   
     &:hover {
       background-color: white;
@@ -28,5 +31,16 @@
         border: none;
       }
     }
+
+    &.inverted {
+      background-color: black;
+      color: white;
+      border: none;
+
+      &:hover {
+        background-color: white;
+        color: black;
+        border: 1px solid black;
+      }
+    }
   }
-  
